fix title vertical alignment (buda-base/comm-website-issues#28) + add missing translations (#152)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1470,9 +1470,11 @@ h4:not(.first)
 .resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first)::before,
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first)::before { padding:8px 10px !important; top:-8px !important; }
 
+/*
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse { padding-left:0; }
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .expand { display:none; }
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) { align-items: baseline;}
+*/
 
 .resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first) .hover-menu,
 .resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first) .hover-menu,
@@ -1529,7 +1531,7 @@ h4:hover a.no-bdrc img { opacity:1; }
 .resource .title + .data + .data { padding-bottom:60px; }
 
 
-.resource .data.images-title { display:flex; align-items: end;position:relative;}
+.resource .data.images-title { display:flex; /*align-items: end;*/ position:relative;}
 .resource .data.etext-title { padding-right:270px; display:flex; align-items: end;position:relative;}
 
 .resource .data h2.intro,
@@ -2819,14 +2821,18 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
 
    .nav .history { margin-left:auto;}
 
+   /* .nav a > span {margin-left:50px;} */
+}
+
+@media (max-width:1200px)
+{
+
    #res-header #pagine { padding-right:24px; }
    #res-header > div { margin-left:24px; width:100%;}
 
    #res-header > div .widget-header {  margin-left: 98px; }
 
-   /* .nav a > span {margin-left:50px;} */
 }
-
 
 #settings { display:none; }
 
